[package]
name = "container-hotplug"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
clap-verbosity-flag = "2"
bytes = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["full"] }
async-stream = "0.3"
udev = "0.8"
bollard = "0.16"
rustix = { version = "0.38", features = ["fs", "stdio", "termios", "process", "thread"] }
bitflags = "2"
aya = { git = "https://github.com/aya-rs/aya.git" }

[build-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
walkdir = "2"

[workspace]
exclude = ["cgroup_device_filter"]
